--- a/bottleShop/main/templates/index.html
+++ b/bottleShop/main/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -8,13 +9,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/banners/1.jpg" class="d-block w-100" alt="...">
+      <img src="{% static 'media/images/banners/1.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/images/banners/2.jpg" class="d-block w-100" alt="...">
+      <img src="{% static 'media/images/banners/2.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/images/banners/3.jpg" class="d-block w-100" alt="...">
+      <img src="{% static 'media/images/banners/3.jpg' %}" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,7 +33,7 @@
 	<div class="row">
 		<div class="col-md-3 mb-4">
 			<div class="card shadow">
-			  <a href="/detail.php"><img src="/images/.jpg" class="card-img-top" alt="..."></a>
+			  <a href="/detail.php"><img src="{% static 'media/images/1.jpg' %}" class="card-img-top" alt="..."></a>
 			  <div class="card-body">
 			    <h6 class="card-text"><a href="/detail.php">Bottle </a></h6>
 			  </div>
