modify html page in category path

--- a/bottleShop/main/templates/base.html
+++ b/bottleShop/main/templates/base.html
@@ -26,7 +26,7 @@
 		        <a class="nav-link text-white" href="">Home</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link text-white" href="/categories.php">Categories</a>
+		        <a class="nav-link text-white" href="{% url 'category_list' %}">Categories</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link text-white" href="/brands.php">Brands</a>
