change link for base.html template, add Home page ,Brand List and Product List

--- a/bottleShop/main/templates/base.html
+++ b/bottleShop/main/templates/base.html
@@ -23,13 +23,13 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item">
-		        <a class="nav-link text-white" href="">Home</a>
+		        <a class="nav-link text-white" href="/">Home</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link text-white" href="{% url 'category_list' %}">Categories</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link text-white" href="/brands.php">Brands</a>
+		        <a class="nav-link text-white" href="{% url 'brand_list' %}">Brands</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link text-white" href="/cart.php"><i class="fa fa-shopping-cart"></i> Cart (2)</a>
