fetch color,size and brand, then id working for check box

--- a/bottleShop/main/templates/product_list.html
+++ b/bottleShop/main/templates/product_list.html
@@ -10,22 +10,12 @@
 			<div class="card mb-4">
 				<h6 class="card-header">Colors</h6>
 				<div class="list-group list-group-flush">
+					{% for color in colors %}
 					<li class="list-group-item">
 						<input type="checkbox" />&nbsp;
-						<button class="btn btn-danger"></button>
+						<button class="btn" style="background-color:{{color.color__color_cod}}; margin-top:-10px;"></button>
 					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						<button class="btn btn-dark"></button>
-					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						<button class="btn btn-success"></button>
-					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						<button class="btn btn-warning"></button>
-					</li>
+					{% endfor %}
 				</div>
 			</div>
 			<!-- Filter 2 -->
@@ -34,7 +24,7 @@
 				<div class="list-group list-group-flush">
 					{% for cat in cats %}
 					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
+						<input value="{{cat.category_id}}" type="checkbox" />&nbsp;
 						{{cat.category__title}}
 					</li>
 					{% endfor %}
@@ -44,40 +34,24 @@
 			<div class="card mb-4">
 				<h6 class="card-header">Brands</h6>
 				<div class="list-group list-group-flush">
+					{% for brand in brands %}
 					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						Brand 1
+						<input value="{{brand.brand_id}}" type="checkbox" />&nbsp;
+						{{brand.brand__title}}
 					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						Brand 2
-					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						Brand 3
-					</li>
+					{% endfor %}
 				</div>
 			</div>
 			<!-- Filter 3 -->
 			<div class="card mb-4">
 				<h6 class="card-header">Sizes</h6>
 				<div class="list-group list-group-flush">
+					{% for size in sizes %}
 					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						< 1 litre
+						<input value="{{size.size__title}}}" type="checkbox" />&nbsp;
+						{{size.size__title}}
 					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						1-2 litre
-					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						2-3 litre
-					</li>
-					<li class="list-group-item">
-						<input type="checkbox" />&nbsp;
-						3-4 litre
-					</li>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
