--- a/bottleShop/main/templates/index.html
+++ b/bottleShop/main/templates/index.html
@@ -31,11 +31,12 @@
 	<!-- Featured Products -->
 	<h3 class="my-4 border-bottom pb-1">Featured Products</h3>
 	<div class="row">
+        {% for product in data %}
 		<div class="col-md-3 mb-4">
 			<div class="card shadow">
-			  <a href="/detail.php"><img src="{% static 'media/images/1.jpg' %}" class="card-img-top" alt="..."></a>
+              <a href="/product/{{product.slug}}/{{product.id}}"><img src="/media/{{product.image}}" class="card-img-top" alt="{{product.title}}"></a>
 			  <div class="card-body">
-			    <h6 class="card-text"><a href="/detail.php">Bottle </a></h6>
+			    <h6 class="card-text"><a href="/product/{{product.slug}}/{{product.id}}">{{product.title}} </a></h6>
 			  </div>
 			  <div class="card-footer">
 			  	<button class="btn btn-sm btn-primary"><i class="fa fa-shopping-cart"></i></button>
@@ -47,6 +48,7 @@
 			  </div>
 			</div>
 		</div>
+        {% endfor %}
 	</div>
 	<p class="my-4 text-center"><a href="{% url 'product-list' %}" class="btn btn-dark btn-sm">All Products <i class="fa fa-long-arrow-alt-right"></i></a></p>
 </main>
