--- a/bottleShop/main/templates/index.html
+++ b/bottleShop/main/templates/index.html
@@ -3,21 +3,25 @@
 {% block content %}
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      {% for banner in banners %}
+      {% if forloop.counter == 1 %}
+    <li data-target="#carouselExampleIndicators" data-slide-to="{{forloop.counter}}" class="active"></li>
+      {% else %}
+    <li data-target="#carouselExampleIndicators" data-slide-to="{{forloop.counter}}" ></li>
+      {% endif %}
+      {% endfor %}
   </ol>
   <div class="carousel-inner">
+      {% for banner in banners %}
+      {% if forloop.counter == 1 %}
     <div class="carousel-item active">
-      <img src="{% static 'media/images/banners/1.jpg' %}" class="d-block w-100" alt="...">
+       {% else %}
+        <div class="carousel-item ">
+       {% endif %}
+      <img src="/media/{{banner.img}}" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
-      <img src="{% static 'media/images/banners/2.jpg' %}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'media/images/banners/3.jpg' %}" class="d-block w-100" alt="...">
-    </div>
-  </div>
+      {% endfor %}
+   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
