--- a/bottleShop/main/templates/product_detail.html
+++ b/bottleShop/main/templates/product_detail.html
@@ -3,14 +3,14 @@
 {% block content %}
 <main class="container my-4">
 	<!-- Featured Products -->
-	<h3 class="my-4 border-bottom pb-1">Product Detail</h3>
+	<h3 class="my-4 border-bottom pb-1"> {{data.title}} </h3>
 	<div class="row">
 		<!-- Images -->
 		<div class="col-md-4">
-			<img id="zoom_01" data-zoom-image="<?php echo $baseUrl; ?>/images/1.jpg" src="<?php echo $baseUrl; ?>/images/1.jpg" class="card-img-top" alt="...">
+			<img id="zoom_01" data-zoom-image="/media/{{data.image}}" src="/media/{{data.image}}" class="card-img-top" alt="{{data.title}}">
 		</div>
 		<div class="col-md-8">
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+			<p>{{data.detail}}</p>
 			<hr/>
 			<table class="table table-bordered">
 				<tr>
@@ -20,18 +20,18 @@
 				<tr>
 					<th>Colors</th>
 					<td>
-						<button class="btn btn-danger btn-lg"></button>
-						<button class="btn btn-info btn-lg"></button>
-						<button class="btn btn-success btn-lg"></button>
-						<button class="btn btn-primary btn-lg"></button>
-						<button class="btn btn-dark btn-lg"></button>
+						{% for prod_attr in data.productattribute_set.all %}
+						<button class="btn btn-lg" style="background-color:{{prod_attr.color.color_cod}}"></button>
+						{% endfor %}
 					</td>
 				</tr>
 				<tr>
 					<th>Sizes</th>
 					<td>
-						<button class="btn btn-outline-secondary btn-sm">900 ml</button>
-						<button class="btn btn-outline-secondary btn-sm">500 ml</button>
+						{% for prod_attr in data.productattribute_set.all %}
+						<button class="btn btn-outline-secondary btn-sm">{{prod_attr.size.title}}</button>
+						{% endfor %}
+
 					</td>
 				</tr>
 			</table>
@@ -52,15 +52,15 @@
 			<table class="table table-bordered">
 				<tr>
 					<th>Brand</th>
-					<td><a href="#">Brand 1</a></td>
+					<td><a href="#">{{data.brand.title}}</a></td>
 				</tr>
 				<tr>
 					<th>Category</th>
-					<td><a href="#">Category 1</a></td>
+					<td><a href="#">{{data.category.title}}</a></td>
 				</tr>
 				<tr>
 					<th>Specification</th>
-					<td>This is lorem ipsum content</td>
+					<td>{{data.specifs}}</td>
 				</tr>
 			</table>
 		</div>
